# spotify-dashboard

./: .env.example  .gitignore  Makefile  README.md  data.dvc  pyproject.toml
docs/: dvc-setup.md
notebooks/: spotify_analysis.ipynb
src/spotify_dashboard/: __init__.py  config.py  database.py  models.py
tests/: __init__.py  conftest.py  test_ingest.py  test_models.py
tools/: __init__.py  ingest.py  init_db.py
