[project]
name = "spotify-dashboard"
version = "0.1.0"
description = "Analyse de mon historique d'écoute Spotify"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "dvc>=3.55",
    "black[jupyter]>=24.0",
]
notebook = [
    "jupyter>=1.0",
    "plotly>=5.18",
    "nbformat>=5.9",
    "kaleido>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_dashboard"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = ["E501"] # on autorise les lignes "trop longues"

[tool.ruff.lint.isort]
known-first-party = ["spotify_dashboard"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$|\.ipynb$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
